--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
 </head>
 <body>
 
-<h1>Student Information Form</h1>
+<h1>Vertex junior talent -2024</h1>
 <form id="studentForm">
     <label for="studentName">Student Name</label>
     <input type="text" id="studentName" name="studentName" required>
